--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Merge Conflict Practice</title>
 </head>
 <body>
-    <div>
+    <div class="div1">
         <h3>Square 1</h3>
     </div>
-    <div>
+    <div class="div2">
         <h3>Square 2</h3>
     </div>
-    <div>
+    <div class="div3">
         <h3>Square 3</h3>
     </div>
 </body>
