--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Merge Conflict Practice</title>
-</head>
-<body>
-    <div>
-        <h3>Square 1</h3>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div class="one">
+      <h3>Square 1</h3>
     </div>
-    <div>
-        <h3>Square 2</h3>
+    <div class="two">
+      <h3>Square 2</h3>
     </div>
-    <div>
-        <h3>Square 3</h3>
+    <div class="three">
+      <h3>Square 3</h3>
     </div>
-</body>
+  </body>
 </html>
